components/MainLayout/components/SmallScreenHeader/SmallScreenStyles.scss
@import "stylesheets/variables";

.wrapper {
  display: block;
  background-color: $mobileNavColor;

  /* The GlobalHeader component handles the navigation on larger screens */
  @media (min-width: $mediumRem) {
    display: none;
  }

  @media print {
    display: none;
  }
}

.header {
  display: flex;
  justify-content: space-between;
  height: 3.5rem;
}

.logo {
  width: 60%;
  max-width: 15rem;
  margin: 0.5rem 1rem;
  background: url("/static/images/dpla-logo-white.svg") 0/100% no-repeat;
  display: flex;

  & span {
    margin-left: -1000rem;
  }
}

.localLogo {
  height: 100%;
  object-fit: contain;
  object-position: left;
}

.logo img {
  width: 100%;
  display: block;
}

.menuButton {
  height: 3.5rem;
  width: 4rem;
  color: white;
  text-transform: uppercase;
  font-size: 0.75rem;
  display: flex;
  justify-content: center;
  background-color: $navColor;

  &.isOpen {
    background-color: $mobileNavMenuButtonOpen;
  }
}

.searchContainer {
  background-color: $navColor;
  height: 0;
  visibility: hidden;
  transition: height 0.15s ease-in-out, visibility 0s 0.15s;
  color: white;

  &.isOpen {
    visibility: visible;
    height: 3.5rem;
    transition: height 0.15s ease-in-out;
  }
}

.searchInput {
  width: 100%;
  background: transparent;
  border: none;
  padding: 0 1rem;
  height: 3.5rem;
  line-height: 1.5;
  color: white;

  /* Remove browser search input defaults */
  &::-webkit-search-decoration,
  &::-webkit-search-cancel-button,
  &::-webkit-search-results-button,
  &::-webkit-search-results-decoration {
    -webkit-appearance: none;
  }

  &::placeholder {
    color: white;
    opacity: 0.5;
  }
}

.menuContainer {
  background-color: $navColor;
  margin: auto;
  padding: 0 2rem;
  font-size: 1.25rem;
  width: 100%;
  visibility: hidden;
  max-height: 0;
  overflow: hidden;
  transition: all 0.2s ease-in-out;
  z-index: 99;

  &.isOpen {
    padding: 1rem 2rem;
    visibility: visible;
    max-height: 30rem;
  }
}

.links {
  & a, & a:visited {
    color: white;
    display: block;
    margin: 0.5rem 0;
  }
}

.divider {
  display: none;
}

.secondaryLinks {
  opacity: 0.85;
}

.tertiaryLinks {
  opacity: 0.7;
}

.secondaryLinks, .tertiaryLinks {
  margin-top: 1.5rem;
  padding-top: 0.75rem;
  border-top: 0.075rem solid rgba(255, 255, 255, 0.5);
}

